# python-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/config/: settings.py
src/entities/: cliente.py  cobertura.py  resultado.py
tests/: test_main.py
